--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,28 @@
       </plugins>
     </pluginManagement>    
   </build>
-   
+  
+  <repositories>
+    <repository>
+      <id>apache.incubating.releases</id>
+      <name>Apache Incubating Release Distribution Repository</name>
+      <url>http://people.apache.org/repo/m2-incubating-repository</url>
+    </repository>
+	<repository>
+      <id>ibiblio</id>
+      <name>ibiblio repository</name>
+      <url>http://mirrors.ibiblio.org/pub/mirrors/maven2</url>
+    </repository>
+    <repository>
+      <id>apache.snapshots</id>
+      <name>Apache Development Snapshot Repository</name>
+      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
+    
   <modules>
     <module>ims-web</module>
     <module>ims-core</module>
