--- a/ims-web/pom.xml
+++ b/ims-web/pom.xml
@@ -39,13 +39,13 @@
     </dependency>
     
     <dependency>
-      <groupId>apache-taglibs</groupId>
+      <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
       <version>${taglib.version}</version>
     </dependency>
     
     <dependency>
-      <groupId>jstl</groupId>
+      <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.1.2</version>
     </dependency>
