* Now system is using soap over http to access the blog service. * Add CXF local transport for web service unit test.

--- a/ims-web/src/main/webapp/WEB-INF/web.xml
+++ b/ims-web/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
       	classpath:/servicesContext.xml,
       	classpath:/securityContext.xml,
       	classpath:/wsContext.xml,
+      	/WEB-INF/ws-services.xml,
       	/WEB-INF/jcaptcha.xml,
       	/WEB-INF/webappFilter.xml
       </param-value>
