--- a/ims-web/pom.xml
+++ b/ims-web/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>ims-parent</artifactId>
     <groupId>net.java.dev</groupId>
-    <version>1.0</version>
+    <version>0.1</version>
   </parent>
   
   <modelVersion>4.0.0</modelVersion>
@@ -11,7 +11,7 @@
   <artifactId>ims-web</artifactId>
   <packaging>war</packaging>
   <name>ims-web</name>
-  <version>1.0</version>
+  <version>0.1</version>
   <url>http://code.google.com/p/blogging</url>
   
   
@@ -57,11 +57,65 @@
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-ws-security</artifactId>
         <version>${cxf.version}</version>
-    </dependency>  
-    
+    </dependency> 
+	
 	<dependency>
 		<groupId>org.springframework</groupId>
-		<artifactId>spring</artifactId>
+		<artifactId>spring-aop</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-beans</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-dao</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-remoting</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-support</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-web</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+   <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-jdbc</artifactId>
 		<version>${spring.version}</version>
     </dependency>
 	
@@ -92,6 +146,10 @@
       	<exclusion>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
+      	</exclusion>
+      	<exclusion>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
       	</exclusion>
       </exclusions>
     </dependency>
@@ -176,13 +234,5 @@
                </plugin>
           </plugins>    
   </build>
-  
-    <repositories>
-	    <repository>
-	      <id>apache.incubating.releases</id>
-	      <name>Apache Incubating Release Distribution Repository</name>
-	      <url>http://people.apache.org/repo/m2-incubating-repository</url>
-	    </repository>
-    </repositories>
   
 </project>
