--- a/ims-books/pom.xml
+++ b/ims-books/pom.xml
@@ -85,6 +85,12 @@
     
     <dependency>
 		<groupId>org.springframework</groupId>
+		<artifactId>spring-hibernate3</artifactId>
+		<version>${spring.version}</version>
+    </dependency>
+    
+    <dependency>
+		<groupId>org.springframework</groupId>
 		<artifactId>spring-remoting</artifactId>
 		<version>${spring.version}</version>
     </dependency>
@@ -142,6 +148,12 @@
         <artifactId>cxf-rt-frontend-jaxws</artifactId>
         <version>${cxf.version}</version>
     </dependency>
+    
+    <dependency>
+        <groupId>org.apache.cxf</groupId>
+        <artifactId>cxf-rt-frontend-jaxrs</artifactId>
+        <version>${cxf.version}</version>
+    </dependency>
 
     <dependency>
         <groupId>org.apache.cxf</groupId>
@@ -168,6 +180,19 @@
         <groupId>org.apache.cxf</groupId>
         <artifactId>cxf-rt-transports-local</artifactId>
         <version>${cxf.version}</version>
-    </dependency> 	
+    </dependency>
+	
+	<dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate</artifactId>
+        <version>3.2.3.ga</version>
+		<exclusions>
+			<exclusion>
+				<groupId>javax.security</groupId>
+				<artifactId>jacc</artifactId>
+			</exclusion>
+		</exclusions>
+    </dependency>
+ 	
   </dependencies>
 </project>
