--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<junit.version>4.3.1</junit.version>
 	<aspectj.version>1.5.3</aspectj.version>
 	<acegi.version>1.0.5</acegi.version>
-	<cxf.version>2.0.2-incubator</cxf.version>
+	<cxf.version>2.1-incubator-SNAPSHOT</cxf.version>
 	<taglib.version>1.1.2</taglib.version>
   </properties>
   
