* Rename the binding files * All the wsdl require the binding, consider extract the schema to common schema * Remove the code.gen target, because, now we use CoC approach

--- a/ims-web/build.xml
+++ b/ims-web/build.xml
@@ -13,9 +13,8 @@
 
     <!--property name="private.repository.dir" value="${basedir}/../../../../thirdparty/repository"/-->
 
-    <target name="code.gen">
-	<wsdl2java wsdl.file="blogs.wsdl"/>
-	<wsdl2java options="-b ${src.main.wsdl.dir}/ims-binding.xml" wsdl.file="blogManager.wsdl"/>
-	<antcall target="compile.code.gen"/>
-    </target>
+<!--     <target name="code.gen"> -->
+<!-- 	<wsdl2java wsdl.file="blogs.wsdl"/> -->
+<!-- 	<wsdl2java options="-b ${src.main.wsdl.dir}/ims-binding.xml" wsdl.file="blogManager.wsdl"/> -->
+<!--     </target> -->
 </project>
