--- a/ims-books/build.xml
+++ b/ims-books/build.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 
-<project name="Information Messaging System - Web" default="install" basedir=".">
+<project name="Information Messaging System - RestBook" default="install" basedir=".">
 
     <property name="fant.etc.dir" value="${ant.home}/etc/fant"/>
 
     <property name="project.group.id" value="net.java.dev"/>
-    <property name="project.artifact.id" value="ims-web"/>
+    <property name="project.artifact.id" value="ims-book"/>
     <property name="project.version" value="1.0"/>
 
-    <property name="project.svn.url" value="https://blogging.googlecode.com/svn/trunk/ims-web"/>
+    <property name="project.svn.url" value="https://blogging.googlecode.com/svn/trunk/ims-book"/>
 
     <import file="${fant.etc.dir}/ant-inc/project.xml"/>
     <import file="${basedir}/etc/ant-inc/dependencies.xml"/>
