--- a/ims-core/build.xml
+++ b/ims-core/build.xml
@@ -8,6 +8,8 @@
     <property name="project.artifact.id" value="ims-core"/>
     <property name="project.version" value="1.0"/>
 
+    <property name="project.svn.url" value="https://blogging.googlecode.com/svn/trunk/ims-core"/>
+
     <import file="${fant.etc.dir}/ant-inc/project.xml"/>
     <import file="${basedir}/etc/ant-inc/dependencies.xml"/>
 
